Closed Bug 409659 Opened 17 years ago Closed 17 years ago

[FIX]nsImageControlFrame is splittable but not listed in nsCSSFrameConstructor::CreateContinuingFrame

Categories

(Core :: Layout: Form Controls, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: bzbarsky)

Details

Attachments

(1 file)

This leads to a "ASSERTION: unexpected frame type" at the end of nsCSSFrameConstructor::CreateContinuingFrame once one tries to split this. I have seen the assert in the at nytimes.com
I have no idea why image controls weren't made splittable to start with.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #294575 - Flags: superreview?(roc)
Attachment #294575 - Flags: review?(roc)
Summary: nsImageControlFrame is splittable but not listed in nsCSSFrameConstructor::CreateContinuingFrame → [FIX]nsImageControlFrame is splittable but not listed in nsCSSFrameConstructor::CreateContinuingFrame
Comment on attachment 294575 [details] [diff] [review] Make it actually splittable // nsIntPoint allocation can fail, in which case we just set the property // to null, which is safe Move this comment down to the code it applies to
Attachment #294575 - Flags: superreview?(roc)
Attachment #294575 - Flags: superreview+
Attachment #294575 - Flags: review?(roc)
Attachment #294575 - Flags: review+
Comment on attachment 294575 [details] [diff] [review] Make it actually splittable Requesting approval. This is a safe patch to just make image controls paginate the same way images do and thereby make the code internally consistent as to whether they can break across page boundaries.
Attachment #294575 - Flags: approval1.9?
Attachment #294575 - Flags: approval1.9? → approval1.9+
Fixed. No idea how to reproduce the assert (for crashtest); perhaps need to have overflow placeholders pointing to image controls?
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: