Make image controls splittable just like regular images.  Bug 409659, r+sr=roc, a=dsicore